--- a/React19StepByStep/react19/src/App.css
+++ b/React19StepByStep/react19/src/App.css
@@ -17,7 +17,15 @@
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
-
+.myList {
+  display: flex;
+  width: 100%;
+  max-width: 469px;
+  align-items: center;
+}
+.myListCol {
+  min-width: 60px;
+}
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
