--- a/SangumMukhergiReact/SangumReact/src/App.css
+++ b/SangumMukhergiReact/SangumReact/src/App.css
@@ -5,17 +5,10 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.flex {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 @keyframes logo-spin {
