--- a/React19StepByStep/react19/src/App.css
+++ b/React19StepByStep/react19/src/App.css
@@ -26,6 +26,20 @@
 .myListCol {
   min-width: 60px;
 }
+
+.ovalSh {
+  background-color: #fde5e5;
+  padding: 2px 11px;
+  border: 1px solid #f7c2c2;
+  margin: 4px;
+  width: auto;
+  font-size: 13px;
+  border-radius: 40%;
+  display: inline-flex;
+  line-height: 11px;
+  align-items: center;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
