--- a/React19StepByStep/react19/src/App.css
+++ b/React19StepByStep/react19/src/App.css
@@ -39,7 +39,28 @@
   line-height: 11px;
   align-items: center;
 }
-
+.boxOuter {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  flex-wrap: wrap;
+  background-color: #888;
+}
+.box {
+  background-color: #fde5e5;
+  padding: 2px 11px;
+  border: 1px solid #f7c2c2;
+  margin: 4px;
+  width: auto;
+  font-size: 13px;
+  width: 50%;
+}
+.clock {
+  background-color: #888;
+  padding: 11px;
+  margin: 7px 0;
+  border-radius: 5px;
+}
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
