--- a/React19StepByStep/react19/src/App.css
+++ b/React19StepByStep/react19/src/App.css
@@ -45,6 +45,8 @@
   width: 100%;
   flex-wrap: wrap;
   background-color: #888;
+  padding: 11px;
+  justify-content: space-between;
 }
 .box {
   background-color: #fde5e5;
@@ -59,6 +61,12 @@
   background-color: #888;
   padding: 11px;
   margin: 7px 0;
+  border-radius: 5px;
+}
+.clock02 {
+  background-color: #a7eaba;
+  padding: 11px;
+  margin: 7px;
   border-radius: 5px;
 }
 @keyframes logo-spin {
